# metis-head

./: .gitignore  ACTIVE_TASK.md  README.md  __init__.py  adapters.py  brain.py  bridge.py  leds.py  pyproject.toml  readiness.py  reducer.py  schemas.py
docs/: HANDOFF_PROMPT_CLAUDE_CODE.md  HANDOFF_REPORT_2026-06-05.md  HANDOFF_REPORT_2026-06-23.md  LOCAL_MIC_SMOKE_TEST.md  LOCAL_STT_SMOKE_TEST.md  METIS_PERSONALITY_CONSTITUTION_v1_0.md  PHASE_0BA_AUDIO_INPUT_STT_PLAN.md  PHYSICAL_RADIO_PANEL_CONTRACT_v0_1.md  READ_ONLY_EXECUTION_POLICY_v0_1.md  VOICE_CONVERSATION_TEST.md  project_variable_map.md
metis_head/: artifacts.py  audio_input.py  boh_link.py  boh_retrieval.py  brain.py  bridge.py  bridge_emulator.py  execution.py  execution_policy.py  governance.py  llm_providers.py  panel.py  personality.py  proposals.py  provider_harness.py  providers.py  read_only_tools.py  readiness.py  reducer.py  scenarios.py  schemas.py  sim_manifest.py  stt.py  tool_completion.py  tool_contract.py  tool_governance.py  tool_plan_runner.py  tool_policy_snapshot.py  tool_readiness.py  tool_registry.py  tool_task_planner.py  voice.py
scripts/: launch_metis.ps1
tests/: conftest.py  test_personality_layer.py  test_phase_0a_0s_acceptance.py  test_phase_0aa_tool_contract_manifest.py  test_phase_0ab_tool_policy_snapshot.py  test_phase_0ac_tool_argument_validation.py  test_phase_0ad_tool_gate_evaluation.py  test_phase_0ae_proposal_review_scope.py  test_phase_0af_tool_readiness.py  test_phase_0ag_tool_completion.py  test_phase_0ah_tool_task_planner.py  test_phase_0ai_tool_plan_storage.py  (+43 more)
(+2 files in other folders)
