[project]
name = "metis-head"
version = "0.0.1"
description = "Metis Head Phase 0A/0S simulation-first skeleton"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.110",
  "uvicorn>=0.27",
]

[project.scripts]
metis-bridge-emulator = "metis_head.bridge_emulator:run_cli"

[project.optional-dependencies]
test = [
  "pytest>=8",
  "httpx>=0.27",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
