[project]
name = "metis-head"
version = "0.1.0"
description = "Metis Head — simulation-first governed mock Brain for the v0.5 radio-shell buildspec (phase 0BC)"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.110",
  "uvicorn>=0.27",
]

[project.scripts]
metis-bridge-emulator = "metis_head.bridge_emulator:run_cli"

[project.optional-dependencies]
test = [
  "pytest>=8",
  "httpx>=0.27",
]
voice = [
  "piper-tts>=1.4.2",
]
mic = [
  "sounddevice>=0.4",
]
stt-whisper = [
  "faster-whisper>=1.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
